Fix new event error that wasn’t showing completely due to lack of height and ‘overflow: hidden’ from liquid containers

--- a/app/styles/new-event.scss
+++ b/app/styles/new-event.scss
@@ -77,6 +77,8 @@
       font-size: 18px;
       color: $sakura-red;
       font-weight: bold;
+      display: block;
+      padding: 5px;
     }
 
     &--filled {
